--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,8 @@
 .app {
-  height: 100vh;
   width: 100vw;
-  .permanent {
-    display: flex;
-    flex-direction: column;
-  }
+  height: 100vh;
+  display: flex;
+
+  // margin: 0 20px;
+  // margin-top: 100px;
 }
