home added lists

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,10 @@
   height: 100vh;
   display: flex;
 
-  // margin: 0 20px;
-  // margin-top: 100px;
+  background: linear-gradient(
+    158deg,
+    rgb(252, 189, 198) 0%,
+    rgb(255, 221, 228) 50%,
+    rgb(255, 139, 166) 100%
+  );
 }
